--- a/Machine Learning 010 - Project Writeup.Rmd
+++ b/Machine Learning 010 - Project Writeup.Rmd
@@ -2,7 +2,9 @@
 title: "Machine Learning 010 Project Writeup"
 author: "Toby Patterson"
 date: "January 23, 2015"
-output: html_document
+output:
+  html_document:
+    self_contained: no
 ---
 
 ```{r echo=F,message=F,warning=F}
