--- a/Machine Learning 010 - Project Writeup.Rmd
+++ b/Machine Learning 010 - Project Writeup.Rmd
@@ -123,6 +123,8 @@ General information about accuracy, confidence, and error.
 modelAccuracy
 ```
 
-## Reference
+## Citations
 
-Dataset and citations: http://groupware.les.inf.puc-rio.br/har
+WLE Dataset: http://groupware.les.inf.puc-rio.br/har
+
+Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. Qualitative Activity Recognition of Weight Lifting Exercises. Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human '13) . Stuttgart, Germany: ACM SIGCHI, 2013.
